Revert "all: bump to use and support node20"

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -14,20 +14,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      - name: Use node.js 20.x
-        uses: actions/setup-node@v4
+        uses: actions/checkout@v3
+      - name: Use node.js 16.x
+        uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 16
       - name: Use CUE
         uses: ./
         with:
-          version: v0.7.1
+          version: v0.6.0
       - name: Check CUE version
         run: cue version
       - name: Run tests
         run: |
-          npm ci
+          npm install
+          npm run test
       - name: Build
         run: npm run dist
       - name: Re-vendor GitHub schemas
